<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="100sp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/hint_user_field"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="163dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/hint_user_password"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint" />

    <Button
        android:id="@+id/main_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_login"
        android:layout_marginHorizontal="130sp"
        android:layout_marginTop="113dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/main_btn" />

    <TextView
        android:id="@+id/result_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_btn"
        android:layout_marginTop="50sp"
        android:text="Здесь будет задание"
        android:textAlignment="center"
        android:textColor="@color/textColorHint"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="2sp"
        />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_alignRight="@id/logo"
        android:layout_marginTop="-88dp"
        android:backgroundTint="@color/textColorCherry"
        android:text="@string/start"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/HidenFastStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        android:alpha="0" />


</RelativeLayout>